<resources>
    <string name="app_name">Kassenautomat</string>

    <string name="strOneEuro" >1,00 €</string>
    <string name="strTwoEuro" >2,00 €</string>
    <string name="strEditTicket">Ticket bearbeiten</string>
    <string name="strBack">Zurück</string>
    <string name="strTicketId">Ticket ID:</string>
    <string name="strDate">Datum</string>
    <string name="strStartTime">Start der Parkzeit:</string>
    <string name="strTime">Uhrzeit</string>
    <string name="strMaintainAutomate">Automat warten</string>
    <string name="strCreateTicket">Ticket lösen</string>
    <string name="strPrakingTicket">Parkticket</string>
    <string name="strRefillCoins">Münzbehälter leeren/füllen</string>
    <string name="strResetAutomata">Automaten zurücksetzen</string>
    <string name="strTitelResetAutomata">Automaten zurücksetzen?</string>
    <string name="strShowSettings">Einstellungen ändern</string>
    <string name="strEndMaintenance">Wartung beenden</string>
    <string name="strFiftyCent">0,50 €</string>
    <string name="strTwentyCent">0,20 €</string>
    <string name="strTenCent">0,10 €</string>
    <string name="strFiveCent">0,05 €</string>
    <string name="strMaintenanceMode">Wartungsmodus</string>
    <string name="strParkingCoins">Parkmünzen</string>
    <string name="strDescFiveCent">Eine 5ct Münze</string>
    <string name="strDescTenCent">Eine 10ct Münze</string>
    <string name="strDescTwentyCent">Eine 20ct Münze</string>
    <string name="strDescFiftyCent">Eine 50ct Münze</string>
    <string name="strDescOneEuro">Eine 1€ Münze</string>
    <string name="strDescTwoEuro">Eine 2€ Münze</string>
    <string name="strDescParkingCoin">Eine Parkmünze</string>
    <string name="strBill">Quittung</string>
    <string name="strDefaultCoinLevel">50/100</string>
    <string name="strPleasePay">Zu zahlen:</string>
    <string name="strDefaultToPay">0,50 €</string>
    <string name="strQuittung">Quittung:</string>
    <string name="strDefaultParkingTime">1:00 h</string>

    <string name="lblTicketPrice">Ticketpreis:</string>
    <string name="strParkedTime">Parkzeit:</string>
    <string name="lblPaidPrice">Bezahlt:</string>
    <string name="lblReceivedChange">Rückgeld:</string>
    <string name="btnPrintReceipt">Quittung drucken</string>

    <string name="strDefaultLcdText">Jede angebrochene halbe Stunde kostet:</string>
    <string name="strPressBackAgainToExit">Zum Verlassen bitte erneut drücken.</string>
    <string name="dropChange">Geldrückgabe</string>
    <string name="strDefaultPricePerUnit">0,50 €</string>
    <string name="strCreateTestTicket">Test-Ticket erstellen</string>
    <string name="strWarningTicketInFuture">Zeitpunk in der Zunkuft!\nAktueller Zeitpunkt genommen.</string>
    <string name="lbl_maxCoinLevel">Größe der Münzbehälter:</string>
    <string name="lbl_defaultCoinLevel">Auffüllen/Leeren bis wie viel Prozent?</string>
    <string name="lbl_RejectedCoinsShare">Wie viel Prozent der Münzen kann der Automat nicht erkennen?</string>
    <string name="lbl_PricePerHalfHour">Ticketpreis pro angefangener halber Stunde:</string>
    <string name="lbl_SaveSettings">Einstellungen speichern</string>
    <string name="lbl_AbortSettings">Abbrechen</string>
    <string name="strMessageResetAutomata">Wenn Sie den Automaten zurücksetzen werden alle Einstellungen und Tickets gelöscht bzw. auf den Werkszustand gesetzt.</string>
    <string name="strReceipt">Quittung auswählen:</string>
    <string name="strViewReceipts">Quittungen anzeigen</string>
    <string name="lbl_passwordMaintenance">Passwort für den Wartungsmodus:</string>
    <string name="strTitlePasswordDialog">Authentifizierung erforderlich</string>
    <string name="strMessagePasswordDialog">Bitte geben Sie das Passwort für den Wartungsmodus ein.</string>
    <string name="strTitleWrongPassword">Authentifizierung fehlgeschlagen</string>
    <string name="strMessageWrongPassword">Das eingegebene Passwort war nicht korrekt.</string>
    <string name="strReceiptPrinted">Quittung gedruckt:</string>

</resources>
