<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<GridLayout
    android:id="@+id/fragmentMaintenance"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:columnCount="3">

	<!-- Überschrift -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strMaintenanceMode"
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3" />

	<!-- 5 Cent -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strFiveCent"
        android:id="@+id/txt5ct"
        android:layout_row="1"
        android:layout_column="0" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prog5"
        android:layout_row="1"
        android:layout_column="1"
        android:max="200"
        android:progress="100"
        android:indeterminate="false"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDefaultCoinLevel"
        android:id="@+id/txt5Count"
        android:layout_row="1"
        android:layout_column="2" />
	<!-- 10 Cent -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strTenCent"
        android:id="@+id/txt10ct"
        android:layout_row="2"
        android:layout_column="0" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prog10"
        android:layout_row="2"
        android:layout_column="1"
        android:max="200"
        android:progress="100"
        android:indeterminate="false"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDefaultCoinLevel"
        android:id="@+id/txt10Count"
        android:layout_row="2"
        android:layout_column="2" />
	<!-- 20 Cent -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strTwentyCent"
        android:id="@+id/txt20ct"
        android:layout_row="3"
        android:layout_column="0" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prog20"
        android:layout_row="3"
        android:layout_column="1"
        android:max="200"
        android:progress="100"
        android:indeterminate="false"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDefaultCoinLevel"
        android:id="@+id/txt20Count"
        android:layout_row="3"
        android:layout_column="2" />
	<!-- 50 Cent -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strFiftyCent"
        android:id="@+id/txt50ct"
        android:layout_row="4"
        android:layout_column="0" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prog50"
        android:layout_row="4"
        android:layout_column="1"
        android:max="200"
        android:progress="100"
        android:indeterminate="false"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDefaultCoinLevel"
        android:id="@+id/txt50Count"
        android:layout_row="4"
        android:layout_column="2" />
	<!-- 1 Euro -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strOneEuro"
        android:id="@+id/txt1euro"
        android:layout_row="5"
        android:layout_column="0" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prog100"
        android:layout_row="5"
        android:layout_column="1"
        android:max="200"
        android:progress="100"
        android:indeterminate="false"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDefaultCoinLevel"
        android:id="@+id/txt100Count"
        android:layout_row="5"
        android:layout_column="2" />
	<!-- 2 Euro -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strTwoEuro"
        android:id="@+id/txt2euro"
        android:layout_row="6"
        android:layout_column="0" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prog200"
        android:layout_row="6"
        android:layout_column="1"
        android:max="200"
        android:progress="100"
        android:indeterminate="false"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDefaultCoinLevel"
        android:id="@+id/txt200Count"
        android:layout_row="6"
        android:layout_column="2" />
	<!-- Parkmünzen -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strParkingCoins"
        android:id="@+id/txtCoins"
        android:layout_row="7"
        android:layout_column="0" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prog0"
        android:layout_row="7"
        android:layout_column="1"
        android:max="200"
        android:progress="100"
        android:indeterminate="false"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strDefaultCoinLevel"
        android:id="@+id/txt0Count"
        android:layout_row="7"
        android:layout_column="2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strRefillCoins"
        android:id="@+id/btnResetCoins"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strCreateTestTicket"
        android:id="@+id/btnCreateTestTicket"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strShowSettings"
        android:id="@+id/btnShowSettings"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strResetDB"
        android:id="@+id/btnResetDB"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strEndMaintenance"
        android:id="@+id/btnEndMaintenance"
        android:layout_row="13"
        android:layout_column="0"
        android:layout_columnSpan="3" />

</GridLayout>
</ScrollView>

